2010-03-18  Antti Koivisto  <koivisto@iki.fi>

Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=36102
        [Qt] Scaling control API for tiled backing store

        Add animated smooth zooming to Qt launcher when in tiled mode.

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::zoomAnimationFinished):
        (LauncherWindow::applyZoom):
        (LauncherWindow::zoomIn):
        (LauncherWindow::zoomOut):
        * QtLauncher/webview.h:
        (WebViewGraphicsBased::graphicsWebView):

Canonical link: https://commits.webkit.org/47473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56179 268f45cc-cd09-0410-ab3c-d52691b4dbfc