WebCore/platform/graphics/TiledBackingStore.cpp
@@ -36,6 +36,7 @@ TiledBackingStore::TiledBackingStore(TiledBackingStoreClient* client)
     , m_tileCreationTimer(new TileTimer(this, &TiledBackingStore::tileCreationTimerFired))
     , m_tileSize(defaultTileWidth, defaultTileHeight)
     , m_contentsScale(1.f)
+    , m_pendingScale(0)
     , m_contentsFrozen(false)
 {
 }
@@ -141,13 +142,24 @@ void TiledBackingStore::viewportChanged(const IntRect& contentsViewport)
 
 void TiledBackingStore::setContentsScale(float scale)
 {
-    if (m_contentsScale == scale)
+    if (m_pendingScale == m_contentsScale) {
+        m_pendingScale = 0;
         return;
-    m_contentsScale = scale;
-
-    invalidate(m_client->tiledBackingStoreContentsRect());
+    }
+    m_pendingScale = scale;
+    if (m_contentsFrozen)
+        return;
+    commitScaleChange();
 }
     
+void TiledBackingStore::commitScaleChange()
+{
+    m_contentsScale = m_pendingScale;
+    m_pendingScale = 0;
+    m_tiles.clear();
+    createTiles();
+}
+
 double TiledBackingStore::tileDistance(const IntRect& viewport, const Tile::Coordinate& tileCoordinate)
 {
     if (viewport.intersects(tileRectForCoordinate(tileCoordinate)))
@@ -351,11 +363,14 @@ void TiledBackingStore::setContentsFrozen(bool freeze)
     // Restart the timers. There might be pending invalidations that
     // were not painted or created because tiles are not created or
     // painted when in frozen state.
-    if (!m_contentsFrozen) {
+    if (m_contentsFrozen)
+        return;
+    if (m_pendingScale)
+        commitScaleChange();
+    else {
         startTileCreationTimer();
         startTileBufferUpdateTimer();
     }
-    // stopping is handled when the timers fire
 }
 
 }
