WebKit/qt/Api/qgraphicswebview.h
@@ -46,6 +46,7 @@ class QWEBKIT_EXPORT QGraphicsWebView : public QGraphicsWidget {
 
     Q_PROPERTY(bool modified READ isModified)
     Q_PROPERTY(bool resizesToContents READ resizesToContents WRITE setResizesToContents)
+    Q_PROPERTY(bool tiledBackingStoreFrozen READ isTiledBackingStoreFrozen WRITE setTiledBackingStoreFrozen)
 
 public:
     explicit QGraphicsWebView(QGraphicsItem* parent = 0);
@@ -82,6 +83,9 @@ public:
 
     bool resizesToContents() const;
     void setResizesToContents(bool enabled);
+    
+    bool isTiledBackingStoreFrozen() const;
+    void setTiledBackingStoreFrozen(bool frozen);
 
     virtual void setGeometry(const QRectF& rect);
     virtual void updateGeometry();
@@ -142,6 +146,7 @@ private:
     // but will be empty if ACCLERATED_COMPOSITING is disabled
     Q_PRIVATE_SLOT(d, void syncLayers())
     Q_PRIVATE_SLOT(d, void _q_contentsSizeChanged(const QSize&))
+    Q_PRIVATE_SLOT(d, void _q_scaleChanged())
 
     QGraphicsWebViewPrivate* const d;
     friend class QGraphicsWebViewPrivate;
