WebKitTools/QtLauncher/main.cpp
@@ -106,6 +106,7 @@ protected slots:
     void zoomOut();
     void resetZoom();
     void toggleZoomTextOnly(bool on);
+    void zoomAnimationFinished();
 
     void print();
     void screenshot();
@@ -138,6 +139,7 @@ signals:
 
 private:
     void createChrome();
+    void applyZoom();
 
 private:
     QVector<int> m_zoomLevels;
@@ -149,6 +151,8 @@ private:
     QAction* m_formatMenuAction;
     QAction* m_flipAnimated;
     QAction* m_flipYAnimated;
+
+    QPropertyAnimation* m_zoomAnimation;
 
 #if QT_VERSION >= QT_VERSION_CHECK(4, 6, 0)
     QList<QTouchEvent::TouchPoint> m_touchPoints;
@@ -168,6 +172,7 @@ LauncherWindow::LauncherWindow(LauncherWindow* other, bool shareScene)
     , m_formatMenuAction(0)
     , m_flipAnimated(0)
     , m_flipYAnimated(0)
+    , m_zoomAnimation(0)
 {
     if (other) {
         init(other->isGraphicsBased());
@@ -425,6 +430,36 @@ void LauncherWindow::showLinkHover(const QString &link, const QString &toolTip)
 #endif
 }
 
+void LauncherWindow::zoomAnimationFinished()
+{
+    if (!isGraphicsBased())
+        return;
+    QGraphicsWebView* view = static_cast<WebViewGraphicsBased*>(m_view)->graphicsWebView();
+    view->setTiledBackingStoreFrozen(false);
+}
+
+void LauncherWindow::applyZoom()
+{
+    if (isGraphicsBased() && page()->settings()->testAttribute(QWebSettings::TiledBackingStoreEnabled)) {
+        QGraphicsWebView* view = static_cast<WebViewGraphicsBased*>(m_view)->graphicsWebView();
+        view->setTiledBackingStoreFrozen(true);
+        if (!m_zoomAnimation) {
+            m_zoomAnimation = new QPropertyAnimation(view, "scale");
+            m_zoomAnimation->setStartValue(view->scale());
+            connect(m_zoomAnimation, SIGNAL(finished()), this, SLOT(zoomAnimationFinished()));
+        } else {
+            m_zoomAnimation->stop();
+            m_zoomAnimation->setStartValue(m_zoomAnimation->currentValue());
+        }
+
+        m_zoomAnimation->setDuration(300);
+        m_zoomAnimation->setEndValue(qreal(m_currentZoom) / 100.);
+        m_zoomAnimation->start();
+        return;
+    }
+    page()->mainFrame()->setZoomFactor(qreal(m_currentZoom) / 100.0);
+}
+
 void LauncherWindow::zoomIn()
 {
     int i = m_zoomLevels.indexOf(m_currentZoom);
@@ -432,7 +467,7 @@ void LauncherWindow::zoomIn()
     if (i < m_zoomLevels.count() - 1)
         m_currentZoom = m_zoomLevels[i + 1];
 
-    page()->mainFrame()->setZoomFactor(qreal(m_currentZoom) / 100.0);
+    applyZoom();
 }
 
 void LauncherWindow::zoomOut()
@@ -441,8 +476,8 @@ void LauncherWindow::zoomOut()
     Q_ASSERT(i >= 0);
     if (i > 0)
         m_currentZoom = m_zoomLevels[i - 1];
-
-    page()->mainFrame()->setZoomFactor(qreal(m_currentZoom) / 100.0);
+    
+    applyZoom();
 }
 
 void LauncherWindow::resetZoom()
